add smart-profile component

--- a/style.css
+++ b/style.css
@@ -98,6 +98,7 @@ strong, em {
 
 img, iframe {
   width: 100%;
+  height: auto;
 }
 
 blockquote {
@@ -585,3 +586,76 @@ h2.screen-reader-text {
     font-size: 0.8em;
     color: #bbb;
   }
+
+/* ==============================================================
+  footer
+==============================================================*/
+
+@media (min-width: 768px) {
+  .area-smart-profile {
+    float: left;
+    border-top: 4px solid #ff9933;
+    border-right: 1px solid #ccc;
+    border-bottom: 1px solid #ccc;
+    border-left: 1px solid #ccc;
+    width: 624px;
+    margin-top: 13px;
+    padding: 5px 7px
+  }
+
+    .box-smart-profile-icon {
+      display: inline-block;
+      float: left;
+    }
+
+      .img-profile-petit {
+        width: 160px;
+        height: 160px;
+        border-radius: 80px;
+      }
+
+    .box-smart-profile-text {
+      display: inline-block;
+      float: left;
+      padding-left: 8pt;
+    }
+
+      .box-smart-profile-name {
+        font-weight: bold;
+        padding-top: 8pt;
+      }
+
+      .box-smart-profile-text > p {
+        margin: 8pt 0 0 0;
+      }
+}
+
+@media (max-width: 768px) {
+  .area-smart-profile {
+    margin-top: 13pt;
+  }
+
+    .box-smart-profile-icon {
+      text-align: center;
+    }
+
+      .img-profile-petit {
+        width: 120px;
+        height: 120px;
+        border-radius: 60px;
+      }
+
+    .box-smart-profile-text {
+      margin-top: 8pt;
+    }
+
+      .box-smart-profile-name {
+        font-weight: bold;
+        text-align: center;
+      }
+
+      .box-smart-profile-text > p {
+        margin: 5pt 30pt 0 30pt;
+        font-size: 0.9em;
+      }
+}
