--- a/common/css/style.css
+++ b/common/css/style.css
@@ -207,6 +207,10 @@ input, button, textarea, select {
   color: #808080;
 }
 
+.accent {
+  color: #ff9900;
+}
+
 
 /* ==============================================================
   button
@@ -272,6 +276,8 @@ input, button, textarea, select {
     }
 
   .header-nav-menu {
+    border: 1px solid menu;
+    background-color: #fafafa;
     width: 100%;
     max-width: 640px;
     margin: 8pt auto 0;
@@ -294,7 +300,9 @@ input, button, textarea, select {
           float: left;
           margin: 0;
           padding: 5pt 10pt;
+          font-size: 0.9em;
         }
+
 
 /* ==============================================================
   single, article
