--- a/common/css/style.css
+++ b/common/css/style.css
@@ -96,10 +96,25 @@ strong, em {
   font-style: normal;
 }
 
-img, iframe {
+img {
   width: 100%;
   height: auto;
 }
+
+.iframe {
+   position: relative;
+   width: 100%;
+   height: auto;
+   padding: 75% 0 0 0;
+}
+
+  .iframe iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  }
 
 blockquote {
   margin: 0 0 30pt 0;
