--- a/common/css/style.css
+++ b/common/css/style.css
@@ -51,16 +51,11 @@ body {
 }
 
 body, input, textarea, select, button {
-  font-family: "Noto Sans Japanese", -apple-system, BlinkMacSystemFont, "Helvetica Neue", "Segoe UI","Noto Sans Japanese","ヒラギノ角ゴ ProN W3", Meiryo, sans-serif;
+  font-family: "Noto Sans Japanese", "Helvetica Neue", "Segoe UI", "ヒラギノ角ゴ ProN W3", Meiryo, sans-serif;
   /* google fonts */
   /*font-family: "Noto Sans Japanese";*/
-<<<<<<< HEAD
   /* ゴシック */
   /*font-family:-apple-system, BlinkMacSystemFont, "Helvetica Neue", "Segoe UI","Noto Sans Japanese","ヒラギノ角ゴ ProN W3", Meiryo, sans-serif;*/
-=======
-   /*ゴシック*/
-  font-family:-apple-system, BlinkMacSystemFont, "Helvetica Neue", "Segoe UI","Noto Sans Japanese","ヒラギノ角ゴ ProN W3", Meiryo, sans-serif;
->>>>>>> f65e874849cd3f1c5f898838fd8a0e247256ccd9
   /* 明朝 */
   /*font-family: Georgia,游明朝,"Yu Mincho",YuMincho,"Hiragino Mincho ProN",HGS明朝E,メイリオ,Meiryo,serif;*/
 }
@@ -109,19 +104,9 @@ img {
   height: auto;
 }
 
-.iframe {
-   position: relative;
-   width: 100%;
-   height: auto;
-   padding: 75% 0 0 0;
-}
-
-  .iframe iframe {
-    position: absolute;
-    top: 0;
-    left: 0;
+iframe {
     width: 100%;
-    height: 100%;
+    height: auto;
   }
 
 blockquote {
